# task1_graph

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake  main.cpp  task1_graph.sln  task1_graph.vcxproj  task1_graph.vcxproj.filters
2d_space/: edge_shape.h  node_shape.h  point.h  shape.h
drawer/: graph_drawer.h  graph_drawer_engine.h  render_frame.h
drawer/drawer_commands/: drawer_command.h  drawer_command_factory.h  drawer_create_command.h  drawer_delete_command.h  drawer_recolor_command.h
graph/: edge.h  edge_data.h  edge_data_flow.h  edge_data_single.h  edge_type.h  graph.h  node.h
include/task1_graph/2d_space/: geometry_resolver.h  point.h  shape.h
include/task1_graph/drawer/: graph_drawer.h  graph_drawer_engine.h  render_frame.h
include/task1_graph/drawer/drawer_commands/: drawer_command.h  drawer_command_factory.h
include/task1_graph/graph/: edge.h  edge_data.h  graph.h  node.h
include/task1_graph/other/: algorithm.h
other/: algorithm.h
src/: graph_drawer.cpp  main.cpp
src/task1_graph/: algorithm.cpp  drawer_command.cpp  drawer_command_factory.cpp  graph.cpp  graph_drawer.cpp  graph_drawer_engine.cpp
task1_graph.dir/Debug/: task1_graph.exe.recipe
task1_graph.dir/Debug/task1_graph.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: task1_graph.exe.recipe  task1_graph.ilk  vc143.idb
x64/Debug/task1_graph.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  task1_graph.lastbuildstate
